<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:gravity="center"
    tools:context=".MainFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic_usage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_alpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alpha_transformation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/size_transformation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_keyFrames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/key_frame" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_complex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complex_view" />


</LinearLayout>